mobile/scss/modules/activity.scss
.activity {  
  .bar-header .title .ion-chevron-down {
    vertical-align: middle;
  }

  .button-padding-top {
    padding-top: 44px;
  }

  .button-padding-bottom {
    padding-bottom: 44px;
  }

  .content-pane .content-top-button {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    font-size: 14px;
    min-height: 44px;
    border-width: 1px 0 0;
    text-align: left;

    .ico {
      float: right;
      margin: 15px 10px 0 0;
      vertical-align: middle;
    }    
  }

  .comment {
    margin: 0 10px;
    border-top: 1px solid #D2D2D2;
    white-space: normal;
    word-wrap: normal;
    overflow: wrap;
    border-color: $stable;
    
    &.item {
      padding-top: 4px !important;
      padding-bottom: 4px !important;
    } 
  }
  .card {
    padding: 0;
    
    .activity-item.bottom {
      padding: $item-padding/2 0;
    }
  }

  > .ico {
    float: left;
    margin-right: 15px;
  }

  .activity-item {
    overflow: hidden;

    i { 
      vertical-align: middle;
      margin-top: 0;
      margin-bottom: 2px;
      font-size: 1.2em;
    }

    .panel {
      position: relative;
      overflow: hidden;
      min-height: 15px;

      .visual {
        margin-right: 5px;
        float: left;

        .avatar {
          max-width: 32px;
          max-height: 32px;
          vertical-align: top;
          border-radius: 50%;
        }
      }

      .text {
        overflow: hidden;
        padding-bottom: 5px;
        margin-bottom: 10px;
        border-bottom: 1px solid $bright-blue;
          
        .holder {
          overflow: hidden;
        }
      }

      .activity-summary {
        display: inline-block;
        overflow: hidden;
        vertical-align: middle;
      }
    }

    &.company-item .panel {
      .visual {
        max-width: 100px;

        .avatar{
          max-width: 100px;
        }
      }

      .text {
        line-height: 32px;
      }
    }

    .last-location, .current-location {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      display: block;
      margin-top: 2px;
      line-height: 1.2em;
    }
    
    .ion-location {
      color: $icon-map-pin-red;
    }

    a.user-link {
      text-decoration: none;
      text-transform: capitalize;
      color: #ff8000;
    }

    &.top, &.bottom {
      padding: $item-padding/2 $item-padding;
      overflow: hidden;
      height: auto;

      .miles, .likes, .driven, .left {
        float: left;
        padding-right: 4px;
      }
      
      .comments, .right {
        float: right;
        padding-left: 4px;
      }
    }
    
    .title {
      font-weight: 500;
      font-size: $bar-title-font-size;
    }

    .title, .notes-content {
      padding: 6px 0;
      display: block;
      display: -webkit-box;
      margin-bottom: 0;
      overflow: hidden;
      white-space: normal;
      text-overflow: ellipsis;
      -webkit-box-orient: vertical;
      -webkit-line-clamp: 10;
    }
    
    .notes-content {  
      border: 1px solid $item-divider-bg;
      background-color: $stable;
      margin-top: 5px;
        
      span {
        padding-left: 10px;
      }
    }
  }
  
  .static-pic {
    position: relative;
    width: 100%;
  }
  
  .static-map {
    position: relative;
    max-width: 100%;
  }


.item-detail {
  padding:10px 15px;
  font-size: 14px;

  .val {
    float: right;
  }
}


  /* add activity */
  .add-activity-pane {
    .item {
      margin:0;
      padding: 6px 10px;
      border-bottom: 1px solid #D2D2D2;
      border-collapse: collapse;
      
      .input-label {
        width:auto;
        font-weight: 500;
        color: inherit;
        max-width: 500px;    
        margin-right: 5px;
      }
      
      input, textarea {
        background-color: transparent;
        font-size: 14px;
        color: $content-body-text;
        line-height: 22px;
        
        ::-webkit-input-placeholder {
          color: $ribbon-bg;
        }
      }
      
      input {
        height: auto;
        line-height: 22px;
        padding:0;
        padding-top: 9px;
        padding-bottom: 7px;
        border: 0;
      }
      
      div {
        white-space: normal;
        font-size:15px;
        color: $content-body-text;
        line-height: 22px;
      }
      
      .notes-holder {
        padding-bottom: 2*$content-padding;
      }
    }
  }

  /* details activity */
  .details-activity-pane {
    .scroll, .item {
      background-color: $light;
    }
    
    .item {
      padding: 10px;

      .top .props {
        border-width: 0;
        padding: 0;
      }

      .likes {
        float: left;

        strong {
          display: inline;
        }
      }
    }
  }

  .top > .props {
    border-top-width: 1px;
    padding-top: 6px;
  }

  .bottom > .props {
    border-bottom-width: 1px;
    padding-bottom: 6px;
  }
  
  .props {
    line-height: 18px;
    border-style: solid;
    border-color: $stable;
    font-size: 14px;
    overflow: hidden;
    height: auto;
    
    & > * {
      display: inline-block;
      vertical-align: middle;
    }
    
    & > div {
      height: 19px;
    }
  
    .miles, .driven, .left {
      float: left;
      padding-right: 4px;
    }
    
    .comments, .likes, .time, .right {
      float: right;
      padding-left: 4px;
    }
    
    .freight {
      text-transform: capitalize;
      padding-left: 14px;
    }
  }
  
  .notes i.icon {
    color: $icon-notes-yellow;
  }
  
  .dist {
    font-weight: 400;
    
    &.mi:after {
      content: 'MI';
      position: relative;
      bottom: 0;
      padding-left: 2px;
      font-size: 0.7em;
      text-transform: uppercase;
    }
  }
  
  .lbl {
    text-transform: capitalize;
    padding-left: 0;
  }

  .time {
    float: right;
    font-weight: 400;
    font-size: 0.8em;
    text-transform: uppercase;
  }
  
  .time-inline {
    display: inline;
    font-size: 0.8em;
    text-transform: uppercase;
  }
}


/* ion-google-place */
.ion-google-place-container {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 20;
  display: none;

  input.ion-google-place[readonly] {
    background-color: transparent;
    cursor: text;
  }
}

